# PragMacro

./: .gitignore  CMakeLists.txt
docs/: design.org  links.txt  optimizations.txt  plan.txt  todo.org
src/api/: builtin.h  c_api.h
src/core/: CMakeLists.txt
src/core/ast/: ast.c  ast.h  expr.h  meta.h  stmt.h  tag.h
src/core/project/: attrs.h  langmod.h  project.h  typedefs.h
src/core/runtime/: frame.c  frame.h
src/lang/: CMakeLists.txt
src/lang/repr/: opcode.h
src/lang/runtime/: env.c  env.h  eval.c  eval.h  frame.c  frame.h  object.c  object.h  pc.c  pc.h
src/lang/runtime/env/: frame.c  frame.h  heap.c  heap.h  pc.c  pc.h  rtti.c  rtti.h
src/lang/runtime/types/: array.c  array.h  object.c  object.h  tag.h
src/lang/symbol/: func.h
src/project/: attrs.h  langmod.h  project.h  typedefs.h
